Fixing spacing

--- a/src/components/Giveaways/Giveaways.css
+++ b/src/components/Giveaways/Giveaways.css
@@ -45,7 +45,7 @@
   margin-bottom: 50px;
 }
 
-.giveaways__others {
+.giveaways__others2 {
   margin-top: 150px;
   margin-bottom: 100px;
   font-family: "Montserrat", sans-serif;
@@ -61,6 +61,10 @@
 
 .giveaways__popular > button :hover {
   color: black;
+}
+
+.none {
+  height: 60vh;
 }
 
 @media (max-width: 793px) {
